--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,1 +1,15 @@
 @import "./core";
+ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+button {
+}
