--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -1,6 +1,5 @@
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400");
 /* Media breakpoints */
 $mobile: "(min-width: 576px)";
 $tablet: "(min-width: 768px)";
@@ -24,7 +23,7 @@ $white: #fff;
 }
 body {
   margin: 0;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
