--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -9,8 +9,8 @@ $huge: "(min-width: 1680px)";
 
 /* Text Color */
 $facebook: #3b5998;
-$google: #013648;
-$github: #013648;
+$google: #dd4b39;
+$github: #333;
 $black: #000;
 $white: #fff;
 
